fixed stumps page signs-content visibility issue

--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -158,11 +158,7 @@
     &-b {
       .stump-signs {
         flex-direction: column;
-        padding: 0
-
-        div:nth-child(1) {
-          order: 2;
-        }
+        padding: 0;
       }
     }
   }
@@ -177,6 +173,10 @@
           font-size: 2rem;
         }
       }
+    }
+
+    &-inner {
+      height: 10vh;
     }
   }
 
